Updated manifest link

--- a/index.html
+++ b/index.html
@@ -73,15 +73,11 @@
     <div class="box">
       <div>
         <p class="emoji">Lightminton updater 🏸</p>
-        <esp-web-install-button
-          manifest="https://firmware.esphome.io/esphome-web/manifest.json"
-        >
+        <esp-web-install-button manifest="racket.json">
           <button slot="activate">Update racket</button>
         </esp-web-install-button>
 
-        <esp-web-install-button
-          manifest="https://firmware.esphome.io/esphome-web/manifest.json"
-        >
+        <esp-web-install-button manifest="birdie.json">
           <button slot="activate">Update birdie</button>
         </esp-web-install-button>
       </div>
